syntax = "proto3";

package gateway;

option go_package = "services/gateway/proto;proto";

message ClientMessageWraper {
  bytes body = 3;
  // for special server, here is nodeid
  string method = 4;
  oneof endpoint {
    string nodeid = 5;
    string server = 6;
  }
}

message AsyncMessageWraper {
  uint64 user_id = 1;
  string topic = 2;
  map<string, string> meta = 3;
  bytes body = 4;
}
